--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ sysinfo.txt
 2018_Context_2_git/Library/CurrentLayout.dwlt
 2018_Context_2_git/Library/EditorInstance.json
 2018_Context_2_git/Temp/UnityLockfile
+*.dwlt
